--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,36 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        if (GradleVersion.current() >= GradleVersion.version("4.2")) {
+            jcenter()
+            google()
+        } else {
+            jcenter()
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        if (GradleVersion.current() < GradleVersion.version("4.0")) {
+            classpath 'com.android.tools.build:gradle:2.1.0'
+        } else if (GradleVersion.current() < GradleVersion.version("4.2")) {
+            classpath 'com.android.tools.build:gradle:2.3.3'
+        } else {
+            classpath 'com.android.tools.build:gradle:3.2.1'
+        }
     }
 }
 
 apply plugin: 'com.android.library'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation fileTree(dir: '../libs', include: ['*.jar'])
+    if (GradleVersion.current() >= GradleVersion.version("4.2")) {
+        implementation fileTree(dir: 'bin', include: ['*.jar'])
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation fileTree(dir: '../libs', include: ['*.jar'])
+    } else {
+        compile fileTree(dir: 'bin', include: ['*.jar'])
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+    }
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
 
 android {
@@ -33,10 +49,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            res.srcDirs = ['res']
+            assets.srcDirs = ['assets']
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 repositories {
     google()
     jcenter()
 }
+
 
